automation/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    name: default
