automation/k8s/keycloak.yaml
apiVersion: v1
kind: Pod
metadata:
  name: keycloak
  labels: 
    app: keycloak
spec:
  containers:
    - name: keycloak
      image: jboss/keycloak:latest
      ports:
        - containerPort: 8443
      volumeMounts:
        - name: portal-realm
          mountPath: /tmp/
  volumes:
    - name: portal-realm
      configMap:
        name: portal-realm

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  annotations:
    cloud.google.com/app-protocols: '{"my-https-port":"HTTPS"}'
spec:
  selector:
    app: keycloak
  ports:
  - protocol: TCP
    name: my-https-port
    port: 8443
    targetPort: 8443
  type: NodePort
