automation/k8s/postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-db
  labels: 
    app: postgres-db
spec:
  containers:
    - name: postgres-db
      image: postgres:latest
      ports:
      - containerPort: 5432
      volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres
  volumes:
    - name: postgres
      persistentVolumeClaim:
       claimName: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  selector:
    app: postgres-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
