automation/k8s/user-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:      
  name: user-api
  labels: 
    app: user-api
spec:
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
      - name: user-api
        image: bobcrutchley/user-api:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-api
spec:
  selector:
    app: user-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
